fixing z-index header

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 0;
     right: 0;
+    z-index: 1;
     background-color: rgb(241, 239, 236);
     display: flex;
     justify-content: space-between;
