--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -14,11 +14,19 @@
 }
 
 .grid-homepage {
+    position: relative;
+    top: -30px;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 5%;
+    gap: 2.5%;
     row-gap: 40px;    
+}
+
+.grid-homepage img {
+    width: 18%;
+    height: auto;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.15), 0 2px 2px rgba(0,0,0,0.15), 0 4px 4px rgba(0,0,0,0.15), 0 8px 8px rgba(0,0,0,0.15);
 }
 
 @media screen and (max-width: 1450px) {
